<resources>
    <string name="app_name">RssFeed</string>
    <string name="banner_feed">Banner Feed</string>
    <string name="dummy_feed_title">Kemerdekaan Indonesia</string>
    <string name="dummy_feed_time">Wed, 29 January 2020</string>
    <string name="dialog_title_warning">Warning!</string>
    <string name="dialog_message">Please input antara news rss url</string>
    <string name="dialog_message_invalid_rss">Rss not found</string>
    <string name="dialog_message_empty">Url cannot be empty</string>
    <string name="progress_get_data">Please wait, getting data &#8230;</string>
    <string name="submit">Submit</string>
    <string name="url_feed">https://www.antaranews.com/rss/</string>
    <string name="hint">Input news category. Ex: metro</string>
    <string name="antara_news">Antara News</string>
</resources>
